; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_pcm.c_pcm_drv_stop.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_pcm.c_pcm_drv_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32, i32, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_9__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_8__*)* }

@cfg = common dso_local global %struct.TYPE_8__* null, align 8
@pud = common dso_local global %struct.TYPE_9__* null, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @pcm_drv_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcm_drv_stop(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 (...) @GET_PUD()
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cfg, align 8
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  store i32 -1, i32* %5, align 8
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** @pud, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %9, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cfg, align 8
  %12 = call i32 %10(%struct.TYPE_8__* %11)
  %13 = load i32, i32* @TRUE, align 4
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cfg, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 3
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i64 1
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  store i32 %13, i32* %18, align 4
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cfg, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 3
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i64 0
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  store i32 %13, i32* %23, align 4
  %24 = load i32*, i32** %2, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cfg, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** @cfg, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @dispatch_callback(i32* %24, i32 %27, i32 %30, i32 0)
  ret i32 0
}

declare dso_local i32 @GET_PUD(...) #1

declare dso_local i32 @dispatch_callback(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
